<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cabecalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sobre"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="40dp"
            android:text="Autores" />
        <TextView
            android:id="@+id/autor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14dp"
            android:textAlignment="center"
            android:text="@string/autor1" />
        <TextView
            android:id="@+id/filiacao1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14dp"
            android:textAlignment="center"
            android:text="@string/filiacao1" />
        <TextView
            android:id="@+id/autor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14dp"
            android:textAlignment="center"
            android:text="@string/autor2" />
        <TextView
            android:id="@+id/filiacao2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14dp"
            android:textAlignment="center"
            android:text="@string/filiacao2" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ano_sobre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ano_sobre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_ano" />
    </LinearLayout>
</LinearLayout>