<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="br.edu.utfpr.goalball.QuartoFragment"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <TextView
                android:id="@+id/somadescontos"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/rotulo_somadescontos" />
    <EditText
                android:id="@+id/campo_somadescontos"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="0"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />
    <TextView
                android:id="@+id/vpl"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/rotulo_vpl" />
    <EditText
                android:id="@+id/campo_vpl"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="0"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />
    <TextView
                android:id="@+id/il"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/rotulo_il" />
    <EditText
                android:id="@+id/campo_il"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="0"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />
    <TextView
                android:id="@+id/tir"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/rotulo_tir" />
    <EditText
                android:id="@+id/campo_tir"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="0"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />
    <TextView
        android:id="@+id/payback"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/rotulo_payback" />
    <EditText
        android:id="@+id/campo_payback"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="0"
        android:inputType="text"
        android:selectAllOnFocus="true" />
    <ImageView
        android:id="@+id/icone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="40dp"
        android:text="@string/rotulo_resultado">
    </TextView>
</LinearLayout>